@@ -1,5 +1,5 @@
 Weberknecht
-Copyright 2007-2012 Patrick Mairif
+Copyright 2007-2013 Patrick Mairif
 
 This product includes software developed at
 The Apache Software Foundation (http://www.apache.org/).
